--- a/drivers/coresight/Kconfig
+++ b/drivers/coresight/Kconfig
@@ -19,6 +19,10 @@ config CORESIGHT_TIMEOUT
 	int "Timeout us for waiting register state change"
 	default 100
 
+config CORESIGHT_ETB
+	bool "ETB coresight device support"
+	default n
+
 config CORESIGHT_ETM
 	bool "ETM coresight device support"
 	default n
