coresight:add tpiu device support
Signed-off-by: liaoao <liaoao@xiaomi.com>

--- a/drivers/coresight/CMakeLists.txt
+++ b/drivers/coresight/CMakeLists.txt
@@ -29,5 +29,9 @@ if(CONFIG_CORESIGHT)
     list(APPEND SRCS coresight_replicator.c)
   endif()
 
+  if(CONFIG_CORESIGHT_TPIU)
+    list(APPEND SRCS coresight_tpiu.c)
+  endif()
+
   target_sources(drivers PRIVATE ${SRCS})
 endif()
