--- a/drivers/coresight/Kconfig
+++ b/drivers/coresight/Kconfig
@@ -27,4 +27,8 @@ config CORESIGHT_REPLICATOR
 	bool "Replicator coresight device support"
 	default n
 
+config CORESIGHT_TPIU
+	bool "TPIU coresight device support"
+	default n
+
 endif # CORESIGHT
