--- a/drivers/coresight/Kconfig
+++ b/drivers/coresight/Kconfig
@@ -51,6 +51,10 @@ config CORESIGHT_STM
 	bool "STM coresight device support"
 	default n
 
+config CORESIGHT_TMC
+	bool "TMC coresight device support"
+	default n
+
 config CORESIGHT_TPIU
 	bool "TPIU coresight device support"
 	default n
