pci/pci_ivshmem: add pci ivshmem driver support
Add common ivshmem driver, provide the ivshmem bus mechisam, so
many ivshmem based driver can change to pci_ivshmem based

Signed-off-by: Bowen Wang <wangbowen6@xiaomi.com>

--- a/drivers/pci/Kconfig
+++ b/drivers/pci/Kconfig
@@ -31,6 +31,12 @@ config PCI_QEMU_EDU
 	---help---
 		Driver for QEMU EDU test device
 
+config PCI_IVSHMEM
+	bool "PCI ivshmem driver"
+	default n
+	---help---
+		Enable Inter-VM share memory device driver.
+
 config PCI_UIO_IVSHMEM
 	bool "Enable uio ivshmem driver support"
 	default n
