--- a/drivers/rpmsg/CMakeLists.txt
+++ b/drivers/rpmsg/CMakeLists.txt
@@ -41,6 +41,10 @@ if(CONFIG_RPMSG)
     list(APPEND SRCS rpmsg_port_spi_slave.c)
   endif()
 
+  if(CONFIG_RPMSG_PORT_UART)
+    list(APPEND SRCS rpmsg_port_uart.c)
+  endif()
+
   if(CONFIG_RPMSG_VIRTIO)
     list(APPEND SRCS rpmsg_virtio.c)
   endif()
