--- a/drivers/rpmsg/Kconfig
+++ b/drivers/rpmsg/Kconfig
@@ -38,4 +38,38 @@ config RPMSG_VIRTIO_STACKSIZE
 	int "rpmsg virtio rx thread stack size"
 	default DEFAULT_TASK_STACKSIZE
 
+config RPMSG_VIRTIO_IVSHMEM
+	bool "rpmsg virtio ivshmem support"
+	default n
+	depends on PCI
+	---help---
+		This is rpmsg virtio driver based on pci ivshmem.
+
+if RPMSG_VIRTIO_IVSHMEM
+
+config RPMSG_VIRTIO_IVSHMEM_NAME
+	string "rpmsg virtio ivshmem name"
+	---help---
+		Using this config to custom the rpmsg virtio ivshmem cpuname and role,
+		using ";" to split the names.
+		For example, if RPMSG_VIRTIO_IVSHMEM_CPUNAME = "cpu1:m;cpu2:s" and pass
+		two ivshmem devices to the qemu, we will get two rpmsg virtio ivshmem drivers
+		with remote cpu names: "cpu1", "cpu2", and roles: "master", "slave"
+
+config RPMSG_VIRTIO_IVSHMEM_BUFFSIZE
+	int "rpmsg virtio ivshmem rpmsg buffer size"
+	default 2048
+	---help---
+		The rpmsg buffer size in share memory, the RX and TX buffer size
+		are same for now.
+
+config RPMSG_VIRTIO_IVSHMEM_BUFFNUM
+	int "rpmsg virtio ivshmem rpmsg buffer number"
+	default 8
+	---help---
+		The rpmsg virtio buffer number in share memory, the RX and TX buffer number
+		are same for now.
+
+endif
+
 endif
