drivers/pci/pci_qemu_edu: update qemu edu driver code
Signed-off-by: yangshuyong <yangshuyong@xiaomi.com>
Signed-off-by: Bowen Wang <wangbowen6@xiaomi.com>
Signed-off-by: lipengfei28 <lipengfei28@xiaomi.com>

--- a/drivers/pci/Kconfig
+++ b/drivers/pci/Kconfig
@@ -25,4 +25,10 @@ config PCI_QEMU_TEST
 	---help---
 		Driver for QEMU PCI test device
 
+config PCI_QEMU_EDU
+	bool "Driver for QEMU EDU test device"
+	default n
+	---help---
+		Driver for QEMU EDU test device
+
 endif # PCI
