drivers/pci/pci_qemu_test: update qemu pci test code
Change the qmeu pci test code for new pci driver framework

Signed-off-by: yangshuyong <yangshuyong@xiaomi.com>
Signed-off-by: Bowen Wang <wangbowen6@xiaomi.com>
Signed-off-by: lipengfei28 <lipengfei28@xiaomi.com>

--- a/drivers/pci/Kconfig
+++ b/drivers/pci/Kconfig
@@ -18,4 +18,11 @@ config PCI_ASSIGN_ALL_BUSES
 	---help---
 		Assign resources to all buses. This is required for some
 		platforms that have multiple PCI buses.
-endif
+
+config PCI_QEMU_TEST
+	bool "Driver for QEMU PCI test device"
+	default n
+	---help---
+		Driver for QEMU PCI test device
+
+endif # PCI
