--- a/drivers/virtio/Kconfig
+++ b/drivers/virtio/Kconfig
@@ -22,6 +22,10 @@ config DRIVERS_VIRTIO_MMIO_QUEUE_LEN
 		If this value equals to 0, use the max queue length get from
 		mmio register.
 
+config DRIVERS_VIRTIO_PCI
+	bool "Virtio PCI Device Support"
+	default n
+
 config DRIVERS_VIRTIO_BLK
 	bool "Virtio block support"
 	depends on !DISABLE_MOUNTPOINT
