virtio-pci: add virtio pci legacy support
Follow the virtio spec, support the virtio pci Legacy

Signed-off-by: wangyongrong <wangyongrong@xiaomi.com>
Signed-off-by: andi <andi6@xiaomi.com>
Signed-off-by: Bowen Wang <wangbowen6@xiaomi.com>

--- a/drivers/virtio/CMakeLists.txt
+++ b/drivers/virtio/CMakeLists.txt
@@ -28,7 +28,7 @@ if(CONFIG_DRIVERS_VIRTIO_MMIO)
 endif()
 
 if(CONFIG_DRIVERS_VIRTIO_PCI)
-  list(APPEND SRCS virtio-pci.c)
+  list(APPEND SRCS virtio-pci-legacy.c virtio-pci-modern.c)
 endif()
 
 if(CONFIG_DRIVERS_VIRTIO_BLK)
