--- a/drivers/virtio/Kconfig
+++ b/drivers/virtio/Kconfig
@@ -26,6 +26,15 @@ config DRIVERS_VIRTIO_PCI
 	bool "Virtio PCI Device Support"
 	default n
 
+config DRIVERS_VIRTIO_PCI_POLLING_PERIOD
+	int "Virtio PCI Polling Period (us)"
+	depends on DRIVERS_VIRTIO_PCI
+	default 0
+	---help---
+		if Polling Period <= 0, not support polling mode.
+		if Polling Period > 0, support polling mode, and it represent
+		polling period (us).
+
 config DRIVERS_VIRTIO_BLK
 	bool "Virtio block support"
 	depends on !DISABLE_MOUNTPOINT
