rpmsg_port_spi: add spi slave support
The rpmsg port spi slave version support

Signed-off-by: liaoao <liaoao@xiaomi.com>

--- a/drivers/rpmsg/CMakeLists.txt
+++ b/drivers/rpmsg/CMakeLists.txt
@@ -37,6 +37,10 @@ if(CONFIG_RPMSG)
     list(APPEND SRCS rpmsg_port_spi.c)
   endif()
 
+  if(CONFIG_RPMSG_PORT_SPI_SLAVE)
+    list(APPEND SRCS rpmsg_port_spi_slave.c)
+  endif()
+
   if(CONFIG_RPMSG_VIRTIO)
     list(APPEND SRCS rpmsg_virtio.c)
   endif()
