Led and buttons examples
Description:
Test LED examples on freedom-k66f, nucleo-f401re and blackpill-f411ce boards.
Update linker file for bluepill-f103c6.

--- a/boards/arm/stm32/stm32f411-minimum/src/CMakeLists.txt
+++ b/boards/arm/stm32/stm32f411-minimum/src/CMakeLists.txt
@@ -28,6 +28,10 @@ if(CONFIG_ARCH_LEDS)
   list(APPEND SRCS stm32_autoleds.c)
 endif()
 
+if(CONFIG_USERLED)
+  list(APPEND SRCS stm32_userleds.c)
+endif()
+
 if(CONFIG_SPI)
   list(APPEND SRCS stm32_spi.c)
 endif()
