BlackPill buttons example
Description:
Example to interact with KEY button and user external button connected to PA1.
For KEY button pull-up resistor is active, board schematic does not show any pull-up or pull-down resistor.

Results: Example working as expected.

BlackPill PWM example

Description:
PWM example using PB0 - Timer3 - Channel 3
Create default configuration for the example.

Controlling_RGB_LED

Description: Controlling a RGB LED on NuttX for Black Pill board [STM32F411]

Note: Example currently not working as expected.

--- a/boards/arm/stm32/stm32f411-minimum/src/CMakeLists.txt
+++ b/boards/arm/stm32/stm32f411-minimum/src/CMakeLists.txt
@@ -32,6 +32,18 @@ if(CONFIG_USERLED)
   list(APPEND SRCS stm32_userleds.c)
 endif()
 
+if(CONFIG_ARCH_BUTTONS)
+  list(APPEND SRCS stm32_buttons.c)
+endif()
+
+if(CONFIG_PWM)
+  list(APPEND SRCS stm32_pwm.c)
+endif()
+
+if(CONFIG_RGBLED)
+  list(APPEND SRCS stm32_rgbled.c)
+endif()
+
 if(CONFIG_SPI)
   list(APPEND SRCS stm32_spi.c)
 endif()
