rpmsg/CMakeLists.txt: add rpmsg_virtio_ivshmem.c in this file
rpmsg_virtio_ivshmem support Cmake compile too

Signed-off-by: wangyongrong <wangyongrong@xiaomi.com>

--- a/drivers/rpmsg/CMakeLists.txt
+++ b/drivers/rpmsg/CMakeLists.txt
@@ -31,5 +31,10 @@ if(CONFIG_RPMSG)
     list(APPEND SRCS rpmsg_virtio.c)
   endif()
 
+  if(CONFIG_RPMSG_VIRTIO_IVSHMEM)
+    list(APPEND SRCS rpmsg_virtio_ivshmem.c)
+  endif()
+
+  target_include_directories(drivers PRIVATE ${NUTTX_DIR}/openamp/open-amp/lib)
   target_sources(drivers PRIVATE ${SRCS})
 endif()
