--- a/arch/x86_64/src/intel64/Kconfig
+++ b/arch/x86_64/src/intel64/Kconfig
@@ -116,6 +116,18 @@ config INTEL64_HPET_BASE
 		Configure base address for HPET. In the future, we can get this address from
 		the ACPI table if ACPI support is enabled.
 
+config INTEL64_HPET_32BIT
+	bool "HPET is 32bit"
+	default n
+	---help---
+		Configure HPET in 32-bit mode.
+
+config INTEL64_HPET_FSB
+	bool "HPET use FSB for interrupt"
+	default n
+	---help---
+		Use FSB for interrupt (works like MSI interrupts).
+
 config ARCH_INTEL64_HPET_ALARM_CHAN
 	int "HPET timer alarm channel"
 	depends on ARCH_INTEL64_HPET_ALARM
