--- a/drivers/usbdev/Kconfig
+++ b/drivers/usbdev/Kconfig
@@ -25,6 +25,12 @@ config USBDEV_DUALSPEED
 	---help---
 		Hardware handles high and full speed operation (USB 2.0)
 
+config USBDEV_SUPERSPEED
+	bool "Enable super speed"
+	default n
+	---help---
+		Hardware handles super speed operation (USB 3.2)
+
 config USBDEV_EPBUFFER_ALIGNMENT
 	int "The usbdev ep req bffer aligned bytes"
 	default 0
