arch/sim/Makefile: add libmad & lame include path
Signed-off-by: shizhenghui <shizhenghui@xiaomi.com>

--- a/arch/sim/src/Makefile
+++ b/arch/sim/src/Makefile
@@ -35,6 +35,14 @@ ifeq ($(CONFIG_VIDEOUTILS_LIBX264),y)
 INCLUDES += ${INCDIR_PREFIX}$(APPSDIR)/videoutils/x264/x264
 endif
 
+ifeq ($(CONFIG_VIDEOUTILS_LIBMAD),y)
+INCLUDES += ${INCDIR_PREFIX}$(APPSDIR)/audioutils/libmad/libmad
+endif
+
+ifeq ($(CONFIG_VIDEOUTILS_LAME),y)
+INCLUDES += ${INCDIR_PREFIX}$(APPSDIR)/audioutils/lame/lame
+endif
+
 CPPFLAGS += $(INCLUDES)
 CFLAGS += $(INCLUDES)
 CXXFLAGS += $(INCLUDES)
