greenhills: fix the file build path error
Signed-off-by: guoshichao <guoshichao@xiaomi.com>

--- a/arch/Kconfig
+++ b/arch/Kconfig
@@ -288,6 +288,7 @@ config ARCH_TOOLCHAIN_TASKING
 
 config ARCH_TOOLCHAIN_GHS
 	bool
+	select ARCH_TOOLCHAIN_GNU
 	default n
 
 config ARCH_GNU_NO_WEAKFUNCTIONS
