sim_sound: add AUDIOUTILS_LAME to dependency list
Signed-off-by: shizhenghui <shizhenghui@xiaomi.com>

--- a/arch/sim/Kconfig
+++ b/arch/sim/Kconfig
@@ -315,6 +315,7 @@ config SIM_SOUND_ALSA
 	bool "alsa support on sim"
 	depends on HOST_LINUX
 	depends on AUDIOUTILS_LIBMAD
+	depends on AUDIOUTILS_LAME
 
 endchoice
 
